build: use conventions plugin